--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@300;500&family=Noto+Sans+Ethiopic:wght@300;400&family=Nunito:wght@400;700&family=Poppins:wght@200;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@300;500&family=Noto+Sans+Ethiopic:wght@300;400&family=Nunito:wght@400;500;700&family=Poppins:wght@200;400&display=swap');
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Jost', sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
